blog/cdk-blog-vpc/cdk.out/cdk-blog-vpc-dev1.template.json
{
  "Resources": {
    "vpcdev122B8E28D": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.14.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc-dev1/vpc-dev1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/Resource"
      }
    },
    "vpcdev1IngressSubnet1SubnetFC0D9474": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.14.0.0/24",
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "AvailabilityZone": "us-gov-east-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet1/Subnet"
      }
    },
    "vpcdev1IngressSubnet1RouteTableE52E7218": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet1/RouteTable"
      }
    },
    "vpcdev1IngressSubnet1RouteTableAssociationB5E3FF28": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet1RouteTableE52E7218"
        },
        "SubnetId": {
          "Ref": "vpcdev1IngressSubnet1SubnetFC0D9474"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet1/RouteTableAssociation"
      }
    },
    "vpcdev1IngressSubnet1DefaultRoute09FF60EA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet1RouteTableE52E7218"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcdev1IGW6087D4EA"
        }
      },
      "DependsOn": [
        "vpcdev1VPCGW24C2D4E0"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet1/DefaultRoute"
      }
    },
    "vpcdev1IngressSubnet2SubnetF0D0F022": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.14.1.0/24",
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "AvailabilityZone": "us-gov-east-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet2/Subnet"
      }
    },
    "vpcdev1IngressSubnet2RouteTableEED9DF52": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet2/RouteTable"
      }
    },
    "vpcdev1IngressSubnet2RouteTableAssociation4ADCEB31": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet2RouteTableEED9DF52"
        },
        "SubnetId": {
          "Ref": "vpcdev1IngressSubnet2SubnetF0D0F022"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet2/RouteTableAssociation"
      }
    },
    "vpcdev1IngressSubnet2DefaultRoute5D5F657D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet2RouteTableEED9DF52"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcdev1IGW6087D4EA"
        }
      },
      "DependsOn": [
        "vpcdev1VPCGW24C2D4E0"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet2/DefaultRoute"
      }
    },
    "vpcdev1IngressSubnet3SubnetD1B8A775": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.14.2.0/24",
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "AvailabilityZone": "us-gov-east-1c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet3/Subnet"
      }
    },
    "vpcdev1IngressSubnet3RouteTable9B25011E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet3/RouteTable"
      }
    },
    "vpcdev1IngressSubnet3RouteTableAssociation8822C174": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet3RouteTable9B25011E"
        },
        "SubnetId": {
          "Ref": "vpcdev1IngressSubnet3SubnetD1B8A775"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet3/RouteTableAssociation"
      }
    },
    "vpcdev1IngressSubnet3DefaultRoute89ECB938": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcdev1IngressSubnet3RouteTable9B25011E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcdev1IGW6087D4EA"
        }
      },
      "DependsOn": [
        "vpcdev1VPCGW24C2D4E0"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IngressSubnet3/DefaultRoute"
      }
    },
    "vpcdev1IGW6087D4EA": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-blog-vpc-dev1/vpc-dev1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/IGW"
      }
    },
    "vpcdev1VPCGW24C2D4E0": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdev122B8E28D"
        },
        "InternetGatewayId": {
          "Ref": "vpcdev1IGW6087D4EA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-blog-vpc-dev1/vpc-dev1/VPCGW"
      }
    }
  },
  "Outputs": {
    "ExportsOutputRefvpcdev122B8E28D3296F345": {
      "Value": {
        "Ref": "vpcdev122B8E28D"
      },
      "Export": {
        "Name": "cdk-blog-vpc-dev1:ExportsOutputRefvpcdev122B8E28D3296F345"
      }
    },
    "ExportsOutputRefvpcdev1IngressSubnet1SubnetFC0D9474AE73AA93": {
      "Value": {
        "Ref": "vpcdev1IngressSubnet1SubnetFC0D9474"
      },
      "Export": {
        "Name": "cdk-blog-vpc-dev1:ExportsOutputRefvpcdev1IngressSubnet1SubnetFC0D9474AE73AA93"
      }
    }
  }
}
